# agent-teams

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/skills/atomic-commits/: SKILL.md
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/migrations/: 001_initial.sql  002_claude_settings.sql  003_claude_default_model.sql
crates/orchestrator-core/resources/: atop-v1.md
crates/orchestrator-core/src/: claude_settings.rs  error.rs  lib.rs  paths.rs
crates/orchestrator-core/src/agents/: agent.rs  api_client.rs  claude_code.rs  mod.rs  traits.rs
crates/orchestrator-core/src/atop/: ingestor.rs  mod.rs  schema.rs
crates/orchestrator-core/src/config/: agent_config.rs  agent_definition.rs  mod.rs  workflow.rs  workflow_step.rs
crates/orchestrator-core/src/domain/: types.rs
crates/orchestrator-core/src/events/: mod.rs
crates/orchestrator-core/src/orchestration/: conditions.rs  mod.rs
crates/orchestrator-core/src/plugins/: loader.rs  mod.rs
crates/orchestrator-core/src/state/: context.rs  mod.rs
crates/orchestrator-core/src/store/: mod.rs  sqlite.rs
crates/orchestrator-core/src/supervisor/: bootstrap.rs  mod.rs  session.rs  workspace.rs
crates/orchestrator-core/tests/: atop_test.rs  claude_settings_test.rs  store_test.rs  supervisor_test.rs
crates/orchestrator-server/: Cargo.toml
crates/orchestrator-server/src/: app_state.rs  cli.rs  config.rs  lib.rs  main.rs  serve.rs  static_files.rs
crates/orchestrator-server/src/routes/: health.rs  mod.rs  projects.rs  setup.rs  tasks.rs  teams.rs
crates/orchestrator-server/src/ws/: mod.rs
crates/orchestrator-server/tests/: api_test.rs
docker/: Dockerfile  docker-compose.yml
docs/brainstorms/: 2026-05-30-agent-orchestrator-v1-requirements.md  2026-05-30-agent-orchestrator-v1.1-requirements.md  2026-05-30-agent-orchestrator-v1.2-requirements.md  2026-05-30-agent-orchestrator-v1.3-requirements.md
docs/plans/: 2026-05-30-001-feat-agent-orchestrator-v1-plan.md  2026-05-30-002-feat-agent-orchestrator-v1.1-plan.md  2026-05-30-003-feat-agent-orchestrator-v1.2-plan.md  2026-05-30-004-feat-agent-orchestrator-v1.3-plan.md
docs/solutions/architecture-patterns/: claude-orchestrator-v1-stack.md
docs/solutions/developer-experience/: orchestrator-v1.2-self-contained-localhost.md
docs/solutions/performance-issues/: orchestrator-pty-blocking-tokio-runtime.md
docs/solutions/ui-bugs/: orchestrator-v1.3-svelte-effect-loop-and-launcher-remount.md
examples/: basic-workflow.yaml
scripts/: dev.ps1  dev.sh
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.svelte
web/src/lib/api/: client.ts
web/src/lib/components/: AgentStatusList.svelte  KanbanBoard.svelte  SettingsPanel.svelte  TeamLauncher.svelte
web/src/lib/stores/: orchestrator.ts
