[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain, agents, and workflow types for claude-orchestrator"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
duct.workspace = true
futures.workspace = true
libloading = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
which.workspace = true

[dev-dependencies]
tempfile = "3.10"
