[package]
name = "orchestrator-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP server and CLI for claude-orchestrator"

[[bin]]
name = "orchestrator-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
futures.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
tokio-util.workspace = true
rfd = "0.15"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }
